# rchan26.github.io

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  _config.yml  index.html
assets/css/: fontawesome-all.min.css  main.css
assets/js/: browser.min.js  jquery.min.js  jquery.scrolly.min.js  main.js
assets/sass/libs/: _vars.scss
pdfs/talks/bayesian_inference_talk_part_ii/: Metropolis_Hastings.py  part_ii.ipynb  part_ii_supplementary.ipynb  pyproject.toml
pdfs/talks/bayesian_inference_talk_part_ii/.ipynb_checkpoints/: part_ii-checkpoint.ipynb
