[tool.poetry]
name = "part-ii-init"
version = "0.1.0"
description = ""
authors = ["rchan <rchan@turing.ac.uk>"]
readme = "README.md"
packages = [{include = "part_ii_init"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.15.0"
scipy = "^1.7.3"
matplotlib = "^3.6.0"
ipython = "^8.5.0"
statsmodels = "^0.13.2"
pymc3 = "^3.11.5"
arviz = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
